##################################################
 Revision history for Log::Log4perl
##################################################

1.27 (not yet released)
   *    (ms) Made meta tag compatible with MakeMaker versions < 6.50
        (ms) [RT 52083] Fixed manifest glitch from 1.26 (reported by
             Lars Thegler).

1.26 (2009/11/22)
    *   (ms) [RT 50495] Perl code in the config file is now evaluated/
             compiled after the configuration parser has done its work, 
             opening up Perl subroutines to all configuration parsers, not
             just PropertyConfigurator. Configuration subs for cspecs, 
             filter, warp_message and appender triggers are sheltered. 
             The previous, flawed implementation surfaced while using 
             a 'trigger' category, reported by Olivier Bilodeau.
    *   (ms) [RT 50090] Added non-portable linebreaks to PatternLayout
             (requested by Zdeněk Juran).
    *   (ms) [RT 50094] Docfix for PatternLayout in main manpage (spotted
             by Peter Rabbitson).
    *   (ms) [RT 28679] Added exists() to "Threshold" keyword uppercase 
             check.
    *   (ms) Took out Class::Prototyped testcase after it got all weird
             and introduced backward-incompatible changes.

1.25 (2009/09/27)
    *   (ms) Appender::File is now closing (or sysclosing) the file
             on file_close() instead of just undef'ing the handle.
    *   (ms) Added l4p-tmpl helper script to help whipping up a new
             log4perl configuration file.
    *   (ms) Fixed uninitialized warning on XML configuration files,
             reported by jbkilian on the sourceforge mailing list.
    *   (ms) Applied patch [RT 43426] by AFF <aff@cpan.org> to have 
             appender_thresholds_adjust return number of appenders changed.
    *   (ms) [RT 34400] New :nostrict target which allows redefining a 
             category within a Log4perl configuration file without error