@@ -5,9 +5,9 @@
 use warnings;
 use strict;
 
-use Test;
+use Test::More;
 
-BEGIN { plan tests => 1 }
+BEGIN { plan tests => 4 }
 
 ##################################################
 package Wrapper::Log4perl;
@@ -26,6 +26,7 @@ sub get_logger {
 
 ##################################################
 package Wrapper::Log4perl::Logger;
+Log::Log4perl->wrapper_register(__PACKAGE__);
 sub new {
     my $real_logger = Log::Log4perl::get_logger(@_);
     bless { real_logger => $real_logger }, $_[0];
@@ -59,4 +60,33 @@ $log0->add_appender($app0);
 my $rootlogger = Wrapper::Log4perl->get_logger("");
 $rootlogger->debug("Hello");
 
-ok($app0->buffer(), "File: 022Wrap.t Line number: 60 package: main");
+is($app0->buffer(), "File: 022Wrap.t Line number: 61 package: main",
+   "appender check");
+
+##################################################
+package L4p::Wrapper;
+Log::Log4perl->wrapper_register(__PACKAGE__);
+no strict qw(refs);
+*get_logger = sub {
+
+    my @args = @_;
+
+    if(defined $args[0] and $args[0] eq __PACKAGE__) {
+         $args[0] =~ s/__PACKAGE__/Log::Log4perl/g;
+    }
+    Log::Log4perl::get_logger( @args );
+};
+
+package main;
+
+my $logger = L4p::Wrapper::get_logger();
+is $logger->{category}, "main", "cat on () is main";
+
+$logger = L4p::Wrapper::get_logger(__PACKAGE__);
+is $logger->{category}, "main", "cat on (__PACKAGE__) is main";
+
+$logger = L4p::Wrapper->get_logger();
+is $logger->{category}, "main", "cat on ->() is main";
+
+# use Data::Dumper;
+# print Dumper($logger);
